2007-10-24  Matthieu Nottale  <nottale@gostai.com>

	Correct uobject behavior.
	When a c++ code reads an UVar, it must triggers notifyaccess, except
	if this read occurrs in a notifychange callback: in this case the
	value is allready up2date, and it would create a potential infinite
	loop to call the notifyaccess.
	* include/kernel/uvariable.hh: Add inSetTarget and isInSetTarget
	  accessor.
	* src/uvar.cc:
	   - invoque uvariable->get() in in() except if inSetTarget()
	   - Add missing call to remote callbacks in setTarget()
	   - call selfSet, setTarget but not setSensorVal in operator = for
	     !owned !variable->autoUpdate case
	* src/uvariable.cc: set/clear inSetTarget in setTarget and setSensor.

2007-10-24  Matthieu Nottale  <nottale@gostai.com>

	Fix notifychange when called from a C++ variable update.
	* src/uvar.cc: Call methods in the correct order, otherwise
	  callbacks are called with the old value.

2007-10-24  Matthieu Nottale  <nottale@gostai.com>

	Fix display of value returned by a bound uobject method.
	* src/ucommand.cc: Replace old display code that does not work
	 anymore by new code (copy-pasted from below in the same function).

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Let wait have a function-like syntax.
	* src/parser/bison/ugrammar.y ("wait"): Take its arg in parens.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	We no longer use pthreads but Boost.Threads.
	* src/Makefile.am: So don't use the compiler flags.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Fix ubanner use in uconsole.
	* src/ubanner.cc (uconsole_banner): Terminate the list.
	* src/console.cc (getCustomHeader): Adjust.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Less deps.
	* src/ubanner.hh, src/ubanner.cc (uconsole_banner): New.
	* src/console.cc: Use it instead of version.hh.
	* include/kernel/userver.hh: Use libport/fwd.hh.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Do not pass libraries in LDFLAGS.