@@ -30,6 +30,8 @@
 #  include <boost/thread.hpp>
 # endif
 
+# include <boost/filesystem.hpp>
+
 # include "libport/fwd.hh"
 # include "libport/compiler.hh"
 # include "libport/lockable.hh"
@@ -170,7 +172,7 @@ public:
 				     int maxlength) = 0;
 
   /// A list of directory names.
-  typedef std::list<std::string> path_type;
+  typedef std::list<boost::filesystem::path> path_type;
   /// Where to look for files to load.
   // Should eventually become an Urbi variable.
   // Should probably be changeable with an envvar.
@@ -180,7 +182,7 @@ public:
 
   /// Return the full file name, handle paths.
   /// Return \a f on failure.
-  virtual std::string find_file (const char* f);
+  virtual std::string find_file (const std::string& f);
 
   /// Load a file into the connection.
   /// Returns UFAIL if anything goes wrong, USUCCESS otherwise.
